--- a/usaid_final_mission.qmd
+++ b/usaid_final_mission.qmd
@@ -9,53 +9,60 @@ execute:
 ---
 
 ```{r}
+#| title: load dependencies
+#| echo: false
+#| message: false
+#| warning: false
 
 library(tidyverse)
 library(janitor)
+library(readxl)
 library(googlesheets4)
 library(ggthemes)
 library(glamr)
+library(gt)
 load_secrets()
 
 ```
 
 ```{r}
 #| title: load award titles
+#| echo: false
+#| message: false
+#| warning: false
 
-df_award_titles <- read_csv("Documents/award_titles.csv")
+map_award_titles <- read_csv("Documents/award_titles.csv")
 
 ```
 
 ```{r}
-#| title: "Load and munge terminated award data"
+#| title: Load and munge data for terminated awards
+#| echo: false
+#| message: false
+#| warning: false
 
 df_terminated <- read_sheet(
   ss = "https://docs.google.com/spreadsheets/d/1LDeXGK8wUIb97ARBvKG_m2PrN7_5ImeS0J7IjVCTvTY",
   sheet = "Terminated Awards",
   skip = 1) |> 
-    clean_names() |>  
-  
+  clean_names() |>  
   separate_wider_delim(
     period_of_performance,
     delim = "-",
     names = c("period_start", "period_end"),
     too_few = "align_start",
     too_many = "merge") |> 
-  
   mutate(across(c(period_start, period_end), str_trim),
          tipo = "Terminado",
          count = row_number(),
-         
          office_division = case_when(office_division == "REGO - Wash and Biodiversity" ~ "REGO-W/B",
                                      office_division == "REGO -Agriculture, Business & Policy" ~ "REGO-A/B/P",
                                      .default = office_division
          ),
-         
          office = case_when(str_detect(office_division, "REGO") ~ "REGO",
                             office_division %in% c("PMI", "PEPFAR", "MNCH", "HSS") ~ "IHO",
                             .default = office_division
          ),
-         
          period_start = if_else(
            str_detect(period_start, "^\\d{2}/\\d{4}$"),
            str_c("01/", period_start),
@@ -69,22 +76,107 @@ df_terminated <- read_sheet(
          across(c(period_start, period_end), lubridate::dmy),
          follow_on_termination_close_out_notice_sent_y_n_date = lubridate::ymd(follow_on_termination_close_out_notice_sent_y_n_date)
          ) |> 
-  
   pivot_longer(starts_with("period_"), names_to = "period_type", values_to = "period_date") |> 
-  
-  left_join(df_award_titles,
+  left_join(map_award_titles,
             by = join_by(award_title)) |> 
-  
   relocate(award_title_new, .after = award_title)
 
-df_timestamp <- format(Sys.time(), "%Y-%m-%d %H:%M:%S %Z")
+
+timestamp_df_terminated <- format(Sys.time(), "%Y-%m-%d %H:%M:%S %Z")
+
+
+val_unique_awards <- df_terminated |> summarise(n = n_distinct(award_title)) |> pull()
+
+```
+
+```{r}
+#| title: Load and munge data for active awards
+#| echo: false
+#| message: false
+#| warning: false
+
+df_active <- read_sheet(
+  ss = "https://docs.google.com/spreadsheets/d/1LDeXGK8wUIb97ARBvKG_m2PrN7_5ImeS0J7IjVCTvTY",
+  sheet = "Active Awards",
+  skip = 1) |> 
+  clean_names() |>  
+  separate_wider_delim(
+    period_of_performance,
+    delim = "-",
+    names = c("period_start", "period_end"),
+    too_few = "align_start",
+    too_many = "merge") |> 
+  mutate(across(c(period_start, period_end), str_trim),
+         tipo = "Terminado",
+         count = row_number(),
+         office_division = case_when(office_division == "REGO - Wash and Biodiversity" ~ "REGO-W/B",
+                                     office_division == "REGO -Agriculture, Business & Policy" ~ "REGO-A/B/P",
+                                     .default = office_division
+         ),
+         office = case_when(str_detect(office_division, "REGO") ~ "REGO",
+                            office_division %in% c("PMI", "PEPFAR", "MNCH", "HSS") ~ "IHO",
+                            .default = office_division
+         ),
+         period_start = if_else(
+           str_detect(period_start, "^\\d{2}/\\d{4}$"),
+           str_c("01/", period_start),
+           period_start
+         ),
+         period_end = if_else(
+           str_detect(period_end, "^\\d{2}/\\d{4}$"),
+           str_c("01/", period_end),
+           period_end
+         ),
+         across(c(period_start, period_end), lubridate::mdy)) |> 
+  pivot_longer(starts_with("period_"), names_to = "period_type", values_to = "period_date") |> 
+  left_join(map_award_titles,
+            by = join_by(award_title)) |> 
+  relocate(award_title_new, .after = award_title)
+
+
+timestamp_df_award <- format(Sys.time(), "%Y-%m-%d %H:%M:%S %Z")
+
+
+val_unique_active_awards <- df_active |> summarise(n = n_distinct(award_title)) |> pull()
 
 ```
 
 
 ```{r}
+#| title: Load and munge data for disposition
+#| echo: false
+#| message: false
+#| warning: false
+
+
+df_disposition <- read_sheet(
+  ss = "https://docs.google.com/spreadsheets/d/11GUdXkqPj1wNyl-VOgijDe11ye-35La9OUnZmgG6wUE",
+  sheet = "Summary Non-Expendable Property",
+  skip = 0) |>
+  clean_names() |>
+  select(name_of_activity:comments)
+
+timestamp_df_disposition <- format(Sys.time(), "%Y-%m-%d %H:%M:%S %Z")
+
+```
+
+## Summary
+
+The closure of USAID/Mozambique will result in the imminent termination of `r val_unique_awards` awards.
+
+```{r}
+#| title: Plot ghantt chart of terminated awards
 #| fig.width: 10
-#| fig.height: 8
+#| fig.height: 9
+
+custom_colors <- c(
+  "EDG" = "#287c6f",
+  "IHO" = "#2057a7",
+  "HAO" = "#f2bc40",
+  "PRO" = "#e07653",
+  "REGO" = "#bfbb60",
+  "OFM" = "#8980cb"
+)
 
 df_terminated |> 
   filter(!is.na(period_date)) |> 
@@ -92,15 +184,17 @@ df_terminated |>
   ggplot() +
   geom_line(
     mapping = aes(x = award_title_new, y = period_date, color = office),
-    size = 4
+    linewidth = 4
   ) +
   scale_y_date(
     date_breaks = "1 year",
     date_labels = "%Y"
   ) +
+  #scale_color_manual(values = custom_colors) +
   labs(
     title = "Terminated Award Timelines",
-    caption = glue::glue("Information Extracted On: ", {df_timestamp}),
+    subtitle = "USAID/Mozambique awards scheduled for termination by September 1, 2025 and their associated agreement\n start and end dates.",
+    caption = glue::glue("Information Extracted On: ", {timestamp_df_terminated}),
     color = "Office") +
   theme_fivethirtyeight() +
   coord_flip() +
@@ -109,7 +203,8 @@ df_terminated |>
     panel.background = element_rect(fill = "white", color = NA),
     legend.background = element_rect(fill = "white", color = NA),
     legend.box.background = element_rect(fill = "white", color = NA),
-    plot.title = element_text(size = 16, face = "bold"),
+    plot.title = element_text(size = 20, face = "bold"),
+    plot.subtitle = element_text(size = 9),
     plot.caption = element_text(size = 8, face = "italic"),
     axis.text.y = element_text(size = 7),
     legend.position = "right",
@@ -119,11 +214,153 @@ df_terminated |>
 
 ```
 
+```{r}
+#| title: Plot ghantt chart of active awards
+#| fig.width: 10
+#| fig.height: 2.5
 
-## Quarto
+df_active |> 
+  filter(!is.na(period_date)) |> 
+  mutate(award_title_new = fct_reorder2(award_title_new, period_type, period_date)) |>
+  ggplot() +
+  geom_line(
+    mapping = aes(x = award_title_new, y = period_date, color = office),
+    linewidth = 4
+  ) +
+  scale_y_date(
+    date_breaks = "1 year",
+    date_labels = "%Y"
+  ) +
+  #scale_color_manual(values = custom_colors) +
+  labs(
+    title = "Active Award Timelines",
+    subtitle = "USAID/Mozambique awards scheduled for transition to the US State Department by July 1, 2025 and their associated agreement\n start and end dates.",
+    caption = glue::glue("Information Extracted On: ", {timestamp_df_terminated}),
+    color = "Office") +
+  theme_fivethirtyeight() +
+  coord_flip() +
+  theme(
+    plot.background = element_rect(fill = "white", color = NA),
+    panel.background = element_rect(fill = "white", color = NA),
+    legend.background = element_rect(fill = "white", color = NA),
+    legend.box.background = element_rect(fill = "white", color = NA),
+    plot.title = element_text(size = 20, face = "bold"),
+    plot.subtitle = element_text(size = 9),
+    plot.caption = element_text(size = 8, face = "italic"),
+    axis.text.y = element_text(size = 7),
+    legend.position = "right",
+    legend.direction = "vertical",
+    legend.title = element_text(size = 12),
+  )
+```
 
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
+
+
+## Asset Disposition
 
 ```{r}
-1 + 1
+#| title: "Table 1: Asset Disposition (selected assets)"
+#| echo: false
+#| message: false
+
+df_disposition |> 
+  filter(asset %in% c("Cellphone", "Vehicles", "Motorcycles", "Laptop", "Computer", "Desktop Computer")) |> 
+  group_by(asset) |>
+  summarise(Total = sum(total, na.rm = TRUE),
+            Government = sum(government, na.rm = TRUE),
+            `Other Entities` = sum(other_entities, na.rm = TRUE)) |>
+  ungroup() |> 
+  mutate(asset = factor(asset, levels = c("Vehicles", "Motorcycles", "Laptop", "Desktop Computer", "Cellphone"))) |> 
+  arrange(asset) |>  # ✅ respects your custom order
+  gt() |> 
+  cols_align(
+    align = "left",
+    columns = "asset"
+  ) |> 
+  tab_header(
+    title = "Asset Disposition by Beneficiary (Select Assets)"
+  ) |> 
+  cols_label(
+    asset = "Asset Type"
+  ) |> 
+  tab_caption(caption = paste("Information Extracted On:", timestamp_df_disposition))
+
+
+
+```
+
+```{r}
+#| title: "Table 2: Asset Disposition by Province"
+#| echo: false
+#| message: false
+#| fig.width: 10
+#| fig.height: 6
+
+df_disposition |> 
+  filter(asset %in% c("Cellphone", "Vehicles", "Motorcycles", "Laptop", "Computer", "Desktop Computer"),
+         !is.na(provinces)) |> 
+  mutate(provinces = factor(provinces, levels = c(
+    "Maputo City", "Gaza", "Sofala", "Manica", "Tete",
+    "Zambézia", "Nampula", "Cabo Delgado", "Niassa"
+  ))) |> 
+  group_by(asset, provinces) |>
+  summarise(Total = sum(total, na.rm = TRUE), .groups = "drop") |> 
+  ggplot(aes(x = provinces, y = Total, fill = asset)) +
+  geom_col(position = "dodge") +   # group bars by province
+  geom_text(
+    aes(label = Total, color = after_scale(fill)),  # <- color matches bar fill
+    position = position_dodge(width = 0.9),
+    hjust = -0.1,
+    size = 3
+  ) +
+  coord_flip() +                   # horizontal layout
+  scale_y_continuous(limits = c(0, 300), breaks = seq(0, 300, by = 100)) +
+  labs(
+    title = "Key Asset Distribution by Type & Province",
+    subtitle = "Total distribution of key IT and mobility assets by province, disaggregated by asset type. Bars represent\n the total quantity distributed in each province.",
+    caption = glue::glue("Information Extracted On: ", {timestamp_df_disposition}),
+    x = NULL,
+    y = "Total Value",
+    fill = "Province"
+  ) +
+  theme_fivethirtyeight() +
+  theme(
+    plot.background = element_rect(fill = "white", color = NA),
+    panel.background = element_rect(fill = "white", color = NA),
+    legend.background = element_rect(fill = "white", color = NA),
+    legend.box.background = element_rect(fill = "white", color = NA),
+    legend.position = "none",
+    strip.background = element_blank(),
+    panel.spacing = unit(1, "lines"),  # spacing between facet panels
+    panel.grid.major.x = element_line(color = "gray90", linewidth = 0.2),  # simulate vertical guides
+    plot.title = element_text(size = 20, face = "bold"),
+    plot.subtitle = element_text(size = 9),
+    plot.caption = element_text(size = 8, face = "italic")
+  ) +
+  facet_wrap(~ factor(asset, levels=c('Vehicles', 'Motorcycles', 'Laptop', 'Computer', 'Desktop Computer', 'Cellphone')), nrow = 1)
+
+
+```
+
+## Annexes
+
+```{r}
+#| title: "Table 2: Asset Disposition (all assets)"
+#| echo: false
+#| message: false
+
+df_disposition |> 
+  filter(!is.na(asset)) |> 
+  group_by(asset) |>
+  summarise(Total = sum(total, na.rm = TRUE),
+            Government = sum(government, na.rm = TRUE),
+            "Other Entities" = sum(other_entities, na.rm = TRUE)) |>
+  ungroup() |> 
+  arrange(desc(Total)) |> 
+  gt() |> 
+  tab_header(
+    title = "Asset Disposition by Beneficiary (All Assets)") |> 
+  cols_label(
+    asset = "Asset Type") |> 
+  tab_caption(caption = paste("Information Extracted On:", timestamp_df_disposition))
 ```
